# cmake_learn

./: .gitignore
hello-world-lib/: build.sh
hello-world-lib/install/lib/pkgconfig/: hello.pc
hello-world-lib/test/: test.c
learnOpenGL/: CMakeLists.txt
learnOpenGL/cmake/modules/: .FindGLFW3.cmake.swp  .FindGLM.cmake.swp
mywork/xkbfile_demo1/: CMakeLists.txt
mywork/xkbfile_demo1/libxkbfile-1.1.0/: Makefile  config.h  config.status  libtool
mywork/xkbfile_demo1/libxkbfile-1.1.0/src/: Makefile
mywork/xkbfile_demo1/libxkbfile-1.1.0/src/.deps/: cout.Plo  maprules.Plo  srvmisc.Plo  xkbatom.Plo  xkbbells.Plo  xkbconfig.Plo  xkbdraw.Plo  xkberrs.Plo  xkbmisc.Plo  xkbout.Plo  xkbtext.Plo  xkmout.Plo  xkmread.Plo
xorg-server/: CMakeLists.txt  description
xorg-server-config/: .CMakeLists.txt.swp  CMakeLists.txt  cmakerecord.txt  copyright  record.txt  xserver-configure-cmd
xorg-server-config/cmake/: CompilerStandalone.cmake  Config.cmake.in  FindDRM.cmake  FindMESA3D.cmake  FindPCIACCESS.cmake  FindPIXMAN.cmake  FindXKBFILE.cmake
xorg-server/cmake/: .FindXSERVER.cmake.swp  FindXSERVER.cmake
